# nanite-clip

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  cliff.toml
.github/docker/: release-build.Dockerfile
.github/workflows/: ci.yml  publish-release-build-image.yml  release.yml  windows-build.yml
assets/linux/: dev.angz.NaniteClip.metainfo.xml  nanite-clip.desktop
docs/: FUTURE.md  FUTURE2.md  PLAT-01-windows-smoke-test.md  PROJECT.md  PROJECTS.md  audio-pipeline-plan.md  custom-clip-durations.md  hotkey-architecture.md  update-v2-roadmap.md  wave-6-plan.md  wave-6-release-notes.md
native/platform_service/: CMakeLists.txt  main.cpp
packaging/flatpak/: dev.angz.NaniteClip.desktop  dev.angz.NaniteClip.metainfo.xml  dev.angz.NaniteClip.yaml
packaging/linux/maintainer-scripts/: after-install.sh
packaging/pacman/: PKGBUILD  PKGBUILD.release
packaging/windows/wix/: install-channel.txt  main.wxs
scripts/: build-update-manifest.py  install-local-linux-desktop-integration.sh  package-release-deb.sh  package-release-flatpak.sh  package-release-linux.sh  package-release-rpm.sh  release.sh  select-update-signing-key.py
src/: app.rs  app_icon.rs  autostart.rs  background_jobs.rs  census.rs  clip_naming.rs  command_runner.rs  config.rs  discord.rs  event_log.rs  honu.rs  hotkey.rs  launcher.rs  main.rs  montage.rs  notifications.rs  platform_service.rs  post_process.rs  profile_transfer.rs  recorder.rs  secure_store.rs  session_report.rs  storage_tiering.rs  thumbnails.rs  timeline_export.rs  tray.rs  ui.rs  uploads.rs
src/app/: helpers.rs  runtime.rs  shared.rs  state.rs  subscriptions.rs  tabs.rs
src/app/tabs/: characters.rs  clips.rs  rules.rs  settings.rs  stats.rs  status.rs
src/app/tabs/clips/: library.rs
src/app/tabs/rules/: editor.rs
src/app/tabs/settings/: options.rs
src/capture/: gsr.rs  mod.rs  obs.rs
src/capture/obs/: compat.rs
src/config/: compat.rs  io.rs  migration.rs
src/db/: clips_repo.rs  core.rs  entities.rs  exports.rs  jobs_repo.rs  lookups_repo.rs  migrations.rs  mod.rs  schema.rs
src/hotkey/: binding.rs
src/platform/: mod.rs
src/post_process/: pipeline.rs
src/process/: env.rs  linux.rs  mod.rs  windows.rs
src/rules/: engine.rs  mod.rs  schedule.rs  switching.rs
src/ui/: app.rs  data.rs  layout.rs  overlay.rs  pickers.rs  primitives.rs  theme.rs
src/ui/data/: data_list.rs  pagination.rs  table.rs  tree.rs
src/ui/layout/: card.rs  collapsible_header.rs  empty_state.rs  page_header.rs  panel.rs  section.rs  sidebar.rs  stat.rs  tabs.rs  toolbar.rs
src/ui/overlay/: banner.rs  menu.rs  modal.rs  popover.rs  toast.rs
src/ui/pickers/: color.rs  date.rs  font.rs  time.rs
src/ui/primitives/: avatar.rs  badge.rs  button.rs  checkbox.rs  input.rs  kbd.rs  label.rs  pick_list.rs  progress.rs  radio.rs  separator.rs  skeleton.rs  slider.rs  spinner.rs  switch.rs  tag.rs  textarea.rs  tooltip.rs
src/update/: channel.rs  download.rs  github.rs  helper.rs  helper_runner.rs  helper_shared.rs  manifest.rs  mod.rs  types.rs
src/uploads/: providers.rs
tests/fixtures/: config_pre_inf02.toml
