[package]
name = "nanite-clip"
version = "0.2.0"
edition = "2024"
default-run = "nanite-clip"
description = "Desktop companion for PlanetSide 2 that automatically saves gameplay clips on notable events"
license = "Apache-2.0"
repository = "https://github.com/AnotherGenZ/nanite-clip"
readme = "README.md"

[dependencies]
auraxis = { version = "0.3", features = ["api"] }
iced = { version = "0.14.0", features = ["tokio", "image"] }
iced_font_awesome = "0.4.2"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.9.8"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
thiserror = "2"
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "2.0.0-rc.37", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls", "blocking", "stream"] }
global-hotkey = "0.7"
obws = { version = "0.15.0", features = ["events", "tls"] }
tray-icon = "0.22.0"
url = "2"
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }
flate2 = "1"
futures-util = "0.3"
sha2 = "0.10"
tar = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["tokio", "global_shortcuts"] }
ksni = { version = "0.3", features = ["blocking"] }
nix = { version = "0.31.2", features = ["signal", "process"] }
pipewire = "0.9"
x11rb = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
